ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2012/10/09 - jgonzale - Simulator
	BUGFIX:		Solved a massive leak in 'file_data_access.c' when
				reading actions. 'op_fields' variable was never free'd
				causing a total memory waste (each trace line stay in
				memory during the whole execution)

	CHANGES:	'MALLOC_*' (in 'mallocame.h|c') never used anymore.
				All memory allocation now uses the pure standard
				'malloc/free' calls.

	CHANGES:	All 'common-files' dependencies are now inside the
				source code package. This is the first step in to rebuild
				an actual 'common-files' in the Performance Tools team.

	BUGFIX:		Almost all compilation 'warnings' cleaned.

2012/09/12 - jgonzale - GUI
	BUGFIX:		Corrected the binary path to call the simulator
				(Dimemas3->Dimemas).

2012/09/03 - vladimir - Simulator
	CHANGES:	Updates on the StarSs scheduler.

2012/09/03 - jgonzale - Other
	CHANGES:	Added a missing header (basic_types.h) and changed the
				building numbering system.

2012/07/31 - jgonzale - Other
	CHANGES:	Small change in the building system to guarantee the
				big file flags inclusion.

2012/07/12 - jgonzale - GUI

	CHANGES:	GUI script is now called 'DimemasGUI'. It is installation
				agnostic, and performs better checks for user-environment
				variables and JRE installation.

2012/07/11 - jgonzale - Other

	CHANGES:	'configure.ac.' moved to 'configure.ac.template' to keep
				track of the versioning easily.

2012/07/11 - jgonzale - trf2dim

	BUGFIX:		Offsets generation adapted to new trace format.

2012/07/11 - jgonzale - Other

	CHANGES:	Full integration of the simulator, GUI and translators in
				a single package to ease the tool distribution and maintenance.

	CHANGES:	Commit tagged as Version 4 of the tool, considering stability