@@ -2,6 +2,10 @@ noinst_LTLIBRARIES = libCommonUtilities.la
 
 simulator_dir = $(top_srcdir)/Simulator
 
+libCommonUtilities_CFLAGS=-DNEW_DIMEMAS_TRACE
+
+libCommonUtilities_CXXFLAGS=-DNEW_DIMEMAS_TRACE
+
 libCommonUtilities_la_SOURCES = \
 	CommonMacros.h \
 	Dimemas2Prv.c \
